Fix Release workflow - use requirements.txt and correct MCP path
- Changed from manual pip install to using requirements.txt
- Fixed mcp/requirements.txt -> skill_seeker_mcp/requirements.txt
- This ensures all dependencies (including httpx) are installed

Fixes the v2.0.0 tag Release workflow failure

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests beautifulsoup4
-        pip install pytest
-        if [ -f mcp/requirements.txt ]; then pip install -r mcp/requirements.txt; fi
+        pip install -r requirements.txt
+        if [ -f skill_seeker_mcp/requirements.txt ]; then pip install -r skill_seeker_mcp/requirements.txt; fi
 
     - name: Run tests
       run: |
