--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: Tests
 
 on:
   push:
-    branches: [ main, development ]
+    branches: [main, development]
   pull_request:
-    branches: [ main, development ]
+    branches: [main, development]
 
 jobs:
   test:
@@ -13,55 +13,58 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ['3.10', '3.11', '3.12']
+        python-version: ["3.10", "3.11", "3.12"]
         exclude:
           # Exclude some combinations to speed up CI
           - os: macos-latest
-            python-version: '3.10'
+            python-version: "3.10"
 
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Cache pip packages
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', 'skill_seeker_mcp/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+      - name: Cache pip packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', 'skill_seeker_mcp/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        if [ -f skill_seeker_mcp/requirements.txt ]; then pip install -r skill_seeker_mcp/requirements.txt; fi
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          if [ -f skill_seeker_mcp/requirements.txt ]; then pip install -r skill_seeker_mcp/requirements.txt; fi
 
-    - name: Run CLI tests
-      run: |
-        python -m pytest tests/test_scraper_features.py -v
-        python -m pytest tests/test_config_validation.py -v
-        python -m pytest tests/test_integration.py -v
+      - name: Ensure pytest-cov is installed
+        run: pip install pytest-cov
 
-    - name: Run MCP server tests
-      run: |
-        python -m pytest tests/test_mcp_server.py -v
+      - name: Run CLI tests
+        run: |
+          python -m pytest tests/test_scraper_features.py -v
+          python -m pytest tests/test_config_validation.py -v
+          python -m pytest tests/test_integration.py -v
 
-    - name: Generate coverage report
-      run: |
-        python -m pytest tests/ --cov=cli --cov=skill_seeker_mcp --cov-report=xml --cov-report=term
+      - name: Run MCP server tests
+        run: |
+          python -m pytest tests/test_mcp_server.py -v
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-        fail_ci_if_error: false
+      - name: Generate coverage report
+        run: |
+          python -m pytest tests/ --cov=cli --cov=skill_seeker_mcp --cov-report=xml --cov-report=term
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: false
 
   # Summary job that provides a single status check for branch protection
   tests-complete:
