Fix Release workflow - add package installation step
The Release workflow was failing with ModuleNotFoundError because it wasn't installing the package before running tests.

Added 'pip install -e .' step to install the skill_seekers package in editable mode, which is required for the src/ layout structure introduced in v2.0.0.

This is the same fix applied to the Tests workflow earlier.

Fixes the failing Release check for v2.1.0 tag.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         if [ -f skill_seeker_mcp/requirements.txt ]; then pip install -r skill_seeker_mcp/requirements.txt; fi
+        # Install package in editable mode for tests (required for src/ layout)
+        pip install -e .
 
     - name: Run tests
       run: |
