--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,9 @@ services:
     name: skill-seekers-api
     runtime: python
     plan: free
-    buildCommand: pip install -r api/requirements.txt
+    buildCommand: |
+      pip install -r api/requirements.txt &&
+      git clone https://github.com/yusufkaraaslan/skill-seekers-configs.git api/configs_repo
     startCommand: cd api && uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
