fix: Add pytest-asyncio and register asyncio marker for CI
Fixes GitHub CI test failures:
- Add pytest-asyncio>=0.24.0 to dev dependencies
- Register asyncio marker in pytest.ini_options
- Add asyncio_mode='auto' configuration
- Update both project.optional-dependencies and tool.uv sections

This resolves:
1. 'asyncio' not found in markers configuration option
2. Ensures pytest-asyncio is available in all test environments

All tests passing locally: 23 passed, 1 skipped in 0.42s

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dependencies = [
 # Development dependencies
 dev = [
     "pytest>=8.4.2",
+    "pytest-asyncio>=0.24.0",
     "pytest-cov>=7.0.0",
     "coverage>=7.11.0",
 ]
@@ -78,6 +79,7 @@ mcp = [
 # All optional dependencies combined
 all = [
     "pytest>=8.4.2",
+    "pytest-asyncio>=0.24.0",
     "pytest-cov>=7.0.0",
     "coverage>=7.11.0",
     "mcp>=1.18.0",
@@ -124,6 +126,12 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short --strict-markers"
+markers = [
+    "asyncio: mark test as an async test",
+    "slow: mark test as slow running",
+]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [tool.coverage.run]
 source = ["src/skill_seekers"]
@@ -143,6 +151,7 @@ exclude_lines = [
 [tool.uv]
 dev-dependencies = [
     "pytest>=8.4.2",
+    "pytest-asyncio>=0.24.0",
     "pytest-cov>=7.0.0",
     "coverage>=7.11.0",
 ]
