--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,7 @@ PyMuPDF==1.24.14
 Pillow==11.0.0
 pytesseract==0.3.13
 pytest==8.4.2
+pytest-asyncio==0.24.0
 pytest-cov==7.0.0
 python-dotenv==1.1.1
 python-multipart==0.0.20
