--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,10 +132,12 @@ skill-seekers-install = "skill_seekers.cli.install_skill:main"
 skill-seekers-install-agent = "skill_seekers.cli.install_agent:main"
 
 [tool.setuptools]
-packages = ["skill_seekers", "skill_seekers.cli", "skill_seekers.cli.adaptors", "skill_seekers.mcp", "skill_seekers.mcp.tools"]
+package-dir = {"" = "src"}
 
-[tool.setuptools.package-dir]
-"" = "src"
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["skill_seekers*"]
+namespaces = false
 
 [tool.setuptools.package-data]
 skill_seekers = ["py.typed"]
