--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ dependencies = [
     "click>=8.3.0",
     "Pygments>=2.19.2",
     "pathspec>=0.12.1",
+    "networkx>=3.0",
 ]
 
 [project.optional-dependencies]
