--- a/pyproject.toml
+++ b/pyproject.toml
@@ -173,13 +173,10 @@ exclude_lines = [
     "@abstractmethod",
 ]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest>=8.4.2",
     "pytest-asyncio>=0.24.0",
     "pytest-cov>=7.0.0",
     "coverage>=7.11.0",
 ]
-
-[tool.uv.sources]
-# Use PyPI for all dependencies
