feat: Enhanced LOCAL enhancement modes with background/daemon/force options
BREAKING CHANGE: None (backward compatible - headless mode remains default)

Adds 4 execution modes for LOCAL enhancement to support different use cases:
from foreground execution to fully detached daemon processes.

New Features:
------------
- **4 Execution Modes**:
  - Headless (default): Runs in foreground, waits for completion
  - Background (--background): Runs in background thread, returns immediately
  - Daemon (--daemon): Fully detached process with nohup, survives parent exit
  - Terminal (--interactive-enhancement): Opens new terminal window (existing)

- **Force Mode (--force/-f)**: Skip all confirmations for automation
  - "Dangerously skip mode" requested by user
  - Perfect for CI/CD pipelines and unattended execution
  - Works with all modes: headless, background, daemon

- **Status Monitoring**:
  - New `enhance-status` command for background/daemon processes
  - Real-time watch mode (--watch)
  - JSON output for scripting (--json)
  - Status file: .enhancement_status.json (status, progress, PID, errors)

- **Daemon Features**:
  - Fully detached process using nohup
  - Survives parent process exit, logout, SSH disconnection
  - Logging to .enhancement_daemon.log
  - PID tracking in status file

Implementation Details:
-----------------------
- Status file format: JSON with status, message, progress (0.0-1.0), timestamp, PID, errors
- Background mode: Python threading with daemon threads
- Daemon mode: subprocess.Popen with nohup and start_new_session=True
- Exit codes: 0 = success, 1 = failed, 2 = no status found

CLI Integration:
----------------
- skill-seekers enhance output/react/ (headless - default)
- skill-seekers enhance output/react/ --background (background thread)
- skill-seekers enhance output/react/ --daemon (detached process)
- skill-seekers enhance output/react/ --force (skip confirmations)
- skill-seekers enhance-status output/react/ (check status)
- skill-s

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,7 @@ skill-seekers-github = "skill_seekers.cli.github_scraper:main"
 skill-seekers-pdf = "skill_seekers.cli.pdf_scraper:main"
 skill-seekers-unified = "skill_seekers.cli.unified_scraper:main"
 skill-seekers-enhance = "skill_seekers.cli.enhance_skill_local:main"
+skill-seekers-enhance-status = "skill_seekers.cli.enhance_status:main"
 skill-seekers-package = "skill_seekers.cli.package_skill:main"
 skill-seekers-upload = "skill_seekers.cli.upload_skill:main"
 skill-seekers-estimate = "skill_seekers.cli.estimate_pages:main"
