docs: Add social media badges and links
- Add Twitter/X follow badge to both READMEs (English and Chinese)
- Add GitHub stars badge for social proof
- Add Author link to pyproject.toml pointing to X profile
- Set repository homepage URL to skillseekersweb.com

These changes improve discoverability and community engagement.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,6 +111,7 @@ Repository = "https://github.com/yusufkaraaslan/Skill_Seekers"
 Documentation = "https://skillseekersweb.com/"
 "Config Browser" = "https://skillseekersweb.com/"
 "中文文档 (Chinese)" = "https://github.com/yusufkaraaslan/Skill_Seekers/blob/main/README.zh-CN.md"
+"Author" = "https://x.com/_yUSyUS_"
 
 [project.scripts]
 # Main unified CLI
